--- a/source/lua/Makefile.in
+++ b/source/lua/Makefile.in
@@ -32,7 +32,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-subdir = source/actions
+subdir = source/lua
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/acinclude.m4 \
@@ -43,30 +43,9 @@ mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
-libactions_la_DEPENDENCIES =
-am_libactions_la_OBJECTS = action.lo context.lo actionresult.lo \
-	actioncontainer.lo containeraction.lo
-libactions_la_OBJECTS = $(am_libactions_la_OBJECTS)
-libdirectunitactions_la_DEPENDENCIES =
-am_libdirectunitactions_la_OBJECTS = consumeammo.lo \
-	inflictunitdamage.lo destructunit.lo changeunitmovement.lo \
-	unitaction.lo changeunitproperty.lo registerunitrftarget.lo \
-	containeraction.lo changecontainerproperty.lo
-libdirectunitactions_la_OBJECTS =  \
-	$(am_libdirectunitactions_la_OBJECTS)
-libfullgameactions_la_DEPENDENCIES =
-am_libfullgameactions_la_OBJECTS = containeraction.lo \
-	consumeresource.lo unitfieldregistration.lo vehicleattack.lo \
-	moveunit.lo
-libfullgameactions_la_OBJECTS = $(am_libfullgameactions_la_OBJECTS)
-libmapactions_la_DEPENDENCIES =
-am_libmapactions_la_OBJECTS = spawnobject.lo changeview.lo \
-	removemine.lo
-libmapactions_la_OBJECTS = $(am_libmapactions_la_OBJECTS)
-libmiscactions_la_DEPENDENCIES =
-am_libmiscactions_la_OBJECTS = servicing.lo jumpdrive.lo \
-	selfdestruct.lo
-libmiscactions_la_OBJECTS = $(am_libmiscactions_la_OBJECTS)
+libluainterface_la_DEPENDENCIES =
+am_libluainterface_la_OBJECTS = luastate.lo luarunner.lo binder.lo
+libluainterface_la_OBJECTS = $(am_libluainterface_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -79,13 +58,8 @@ CXXLD = $(CXX)
 CXXLINK = $(LIBTOOL) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) \
 	--mode=link $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) \
 	$(LDFLAGS) -o $@
-SOURCES = $(libactions_la_SOURCES) $(libdirectunitactions_la_SOURCES) \
-	$(libfullgameactions_la_SOURCES) $(libmapactions_la_SOURCES) \
-	$(libmiscactions_la_SOURCES)
-DIST_SOURCES = $(libactions_la_SOURCES) \
-	$(libdirectunitactions_la_SOURCES) \
-	$(libfullgameactions_la_SOURCES) $(libmapactions_la_SOURCES) \
-	$(libmiscactions_la_SOURCES)
+SOURCES = $(libluainterface_la_SOURCES)
+DIST_SOURCES = $(libluainterface_la_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -250,22 +224,11 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
-AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ 
-noinst_LTLIBRARIES = libactions.la libdirectunitactions.la libmiscactions.la libmapactions.la libfullgameactions.la
-libactions_la_SOURCES = action.cpp context.cpp actionresult.cpp actioncontainer.cpp containeraction.cpp
-libactions_la_LIBADD = @SDL_LIBS@
-libdirectunitactions_la_SOURCES = consumeammo.cpp inflictunitdamage.cpp destructunit.cpp   \
-                          changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp \
-                          containeraction.cpp changecontainerproperty.cpp 
-
-libdirectunitactions_la_LIBADD = @SDL_LIBS@
-libmiscactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp 
-libmiscactions_la_LIBADD = @SDL_LIBS@
-libmapactions_la_SOURCES = spawnobject.cpp changeview.cpp removemine.cpp
-libmapactions_la_LIBADD = @SDL_LIBS@
-libfullgameactions_la_SOURCES = containeraction.cpp consumeresource.cpp unitfieldregistration.cpp vehicleattack.cpp moveunit.cpp 
-libfullgameactions_la_LIBADD = @SDL_LIBS@
-EXTRA_DIST = $(srcdir)/*.h
+AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ @LUA_FLAGS@
+noinst_LTLIBRARIES = libluainterface.la 
+libluainterface_la_SOURCES = luastate.cpp luarunner.cpp binder.cpp
+libluainterface_la_LIBADD = @LUA_LIBS@
+EXTRA_DIST = $(srcdir)/*.h 
 all: all-am
 
 .SUFFIXES:
@@ -279,9 +242,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  source/actions/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu  source/lua/Makefile'; \
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  source/actions/Makefile
+	  $(AUTOMAKE) --gnu  source/lua/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -308,16 +271,8 @@ clean-noinstLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libactions.la: $(libactions_la_OBJECTS) $(libactions_la_DEPENDENCIES) 
-	$(CXXLINK)  $(libactions_la_OBJECTS) $(libactions_la_LIBADD) $(LIBS)
-libdirectunitactions.la: $(libdirectunitactions_la_OBJECTS) $(libdirectunitactions_la_DEPENDENCIES) 
-	$(CXXLINK)  $(libdirectunitactions_la_OBJECTS) $(libdirectunitactions_la_LIBADD) $(LIBS)
-libfullgameactions.la: $(libfullgameactions_la_OBJECTS) $(libfullgameactions_la_DEPENDENCIES) 
-	$(CXXLINK)  $(libfullgameactions_la_OBJECTS) $(libfullgameactions_la_LIBADD) $(LIBS)
-libmapactions.la: $(libmapactions_la_OBJECTS) $(libmapactions_la_DEPENDENCIES) 
-	$(CXXLINK)  $(libmapactions_la_OBJECTS) $(libmapactions_la_LIBADD) $(LIBS)
-libmiscactions.la: $(libmiscactions_la_OBJECTS) $(libmiscactions_la_DEPENDENCIES) 
-	$(CXXLINK)  $(libmiscactions_la_OBJECTS) $(libmiscactions_la_LIBADD) $(LIBS)
+libluainterface.la: $(libluainterface_la_OBJECTS) $(libluainterface_la_DEPENDENCIES) 
+	$(CXXLINK)  $(libluainterface_la_OBJECTS) $(libluainterface_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -325,29 +280,9 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/action.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/actioncontainer.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/actionresult.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/changecontainerproperty.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/changeunitmovement.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/changeunitproperty.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/changeview.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/consumeammo.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/consumeresource.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/containeraction.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/context.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/destructunit.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/inflictunitdamage.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/jumpdrive.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moveunit.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/registerunitrftarget.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/removemine.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/selfdestruct.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/servicing.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/spawnobject.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitaction.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unitfieldregistration.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicleattack.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/binder.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/luarunner.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/luastate.Plo@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	$(CXXCOMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
