--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,2.1.5.0)
+AC_INIT(asc,2.1.90.0)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -189,6 +189,17 @@ AC_CHECK_LIB( SDL_image,
 #from http://www.libsdl.org/projects/SDL_image/ ]]) )
 #AC_MSG_RESULT("yes")
 
+
+AC_CHECK_LIB(lua5.1, 
+             lua_open,
+             AC_LIB_MISSING( Lua, http://www.lua.org/))
+
+
+LUA_FLAGS="-I/usr/include/lua50/"
+AC_SUBST(LUA_FLAGS)
+
+LUA_LIBS="-llua50 -llualib50 -lluabind"
+AC_SUBST(LUA_LIBS)
 
 AC_CHECK_LIB(jpeg, 
              jpeg_CreateDecompress,,
@@ -640,6 +651,7 @@ AC_CONFIG_FILES( [ Makefile \
        source/actions/Makefile \
        source/tasks/Makefile \
        source/video/Makefile \
+       source/lua/Makefile \
        source/doc/Makefile \
        source/libs/Makefile \
        source/libs/sdlmm/Makefile \
