--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -98,6 +98,7 @@ asc_DEPENDENCIES =  \
 	$(top_builddir)/source/actions/libfullgameactions.la \
 	$(top_builddir)/source/actions/libmapactions.la \
 	$(top_builddir)/source/actions/libmiscactions.la \
+	$(top_builddir)/source/lua/libluainterface.la \
 	$(top_builddir)/source/util/libutil.la \
 	$(top_builddir)/source/tasks/libtasks.la \
 	$(top_builddir)/source/graphics/libgraphics.la \
@@ -110,7 +111,8 @@ asc_DEPENDENCIES =  \
 	$(top_builddir)/source/network/libnetwork.la \
 	$(top_builddir)/source/video/libvideo.la $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -185,6 +187,8 @@ LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
+LUA_FLAGS = @LUA_FLAGS@
+LUA_LIBS = @LUA_LIBS@
 LokiInclude = @LokiInclude@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
@@ -318,13 +322,14 @@ $(top_builddir)/source/actions/libdirectunitactions.la  \
 $(top_builddir)/source/actions/libfullgameactions.la  \
 $(top_builddir)/source/actions/libmapactions.la  \
 $(top_builddir)/source/actions/libmiscactions.la  \
+$(top_builddir)/source/lua/libluainterface.la  \
 $(top_builddir)/source/util/libutil.la  $(top_builddir)/source/tasks/libtasks.la \
 $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/libdialogs.la \
 $(top_builddir)/source/dialogs/libgamedialogs.la $(top_builddir)/source/actions/libactions.la \
 $(top_builddir)/source/libs/paragui/src/libparagui.la $(top_builddir)/source/widgets/libwidgets.la \
 $(top_builddir)/source/sdl/libsdlsnd.la $(top_builddir)/source/network/libnetwork.la  \
 $(top_builddir)/source/video/libvideo.la  \
-@LDADDLIBBZ2@  $(SIGC_LIBS) $(SDL_LIBS) $(FREETYPE_LIBS) $(BOOST_LIBS) $(SDL_SOUND_LIB) 
+@LDADDLIBBZ2@  $(SIGC_LIBS) $(SDL_LIBS) $(FREETYPE_LIBS) $(BOOST_LIBS) $(SDL_SOUND_LIB) $(LUA_LIBS)
 
 all: all-am
 
