Added terrain-check for building/unit removal after object growth  Fixed compilation problems with unitguide dialog

--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -654,6 +654,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\unitguidedialog.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\unitinfodialog.cpp"
 					>
 				</File>
