--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -810,6 +810,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\unitguidedialog.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\unitinfodialog.cpp"
 					>
 				</File>
