--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -663,6 +663,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\unitguidedialog.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\unitinfodialog.cpp"
 					>
 				</File>
